# huffman_compressor

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: BitStream.hpp  DirectoryCompressor.hpp  FileCompressor.hpp  Header.hpp  HuffmanArchiver.hpp  HuffmanTree.hpp  Packer.hpp
src/: BitStream.cpp  DirectoryCompressor.cpp  FileCompressor.cpp  HuffmanArchiver.cpp  HuffmanTree.cpp  Packer.cpp  main.cpp  test  test.cpp
